fix: small display overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -341,6 +341,16 @@ header nav {
     text-align: right;
     padding-right: 0;
   }
+  td.Bok,
+  th.Bok {
+    display: none;
+  }
+  @media (min-width: 550px) {
+    td.Bok,
+    th.Bok {
+      display: block;
+    }
+  }
   a {
     color: var(--secondary);
   }
